[package]
name = "eroc_test_macro"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Procedural macros for eroc_test."
repository = "https://github.com/radifun/eroc_test_macro"
readme = "README.md"

publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["full"] }
quote = "1.0.23"
